--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <tr> <td>
 <img src="./face pic .png">
     </td>
-    <td> <h2>Madujith M A</h2>
+    <td> <h1>Madujith M A</h1>
       <p><em>student at <a href="https://www.bitsathy.ac.in/" target="_blank" ><strong>Bannari Amman Institute of Technology</strong></a></em></p>
 
       <p>I am a web and software developer.I ❤️ to code and to play Basketball</p></td>
@@ -156,6 +156,10 @@
   <tr><th>Linkedin</th><td><a href="www.linkedin.com/in/madujith-ma2000">www.linkedin.com/in/madujith-ma2000</a></td></tr>
   
 </table>
+</div>
+<hr>
+<div class=footer>
+  <span>&copy;MADUJITH M A</span>
 </div>
 </body>
 </html>
