--- a/index.html
+++ b/index.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" href="styles.css">
   <title>CV of Madujith M A</title>
 </head>
+
 <body>
   <table cellspacing=25px id="intro">
-    <tr> <td>
-<img src="./face pic .png">
-    </td>
-    <td> <h1>Madujith M A</h1>
-      <p><em>student at <a href="https://www.bitsathy.ac.in/" target="_blank" ><strong>Bannari Amman Institute of Technology</strong></a></em></p>
+    <tr>
+      <td>
+        <img src="./face pic .png">
+      </td>
+      <td>
+        <h1>Madujith M A</h1>
+        <p><em>student at <a href="https://www.bitsathy.ac.in/" target="_blank"><strong>Bannari Amman Institute of
+                Technology</strong></a></em></p>
 
-      <p>I am a web and software developer.I ❤️ to code and to play Basketball</p></td>
-  </tr>
+        <p>I am a web and software developer.I ❤️ to code and to play Basketball</p>
+      </td>
+    </tr>
   </table>
   <hr>
   <h3>Area of Interest</h3>
   <ul>
     <li>Web Development</li>
-    <li>App Development  </li>
+    <li>Data Science *</li>
   </ul>
   <hr>
   <h3>Skills</h3>
-  <table cellspacing=15 >
+  <table cellspacing=15>
     <th>Software skills</th>
     <th></th>
     <th> Web skills</th>
@@ -34,40 +40,61 @@
     <th> Others</th>
     <tr>
       <td>
-        C programming  
-      </td><td>⭐⭐⭐⭐</td>
-      <td>HTML </td><td>⭐⭐⭐⭐⭐</td>
-      <td>PLC</td><td>⭐⭐⭐⭐</td>
+        C programming
+      </td>
+      <td>⭐⭐⭐⭐</td>
+      <td>HTML </td>
+      <td>⭐⭐⭐⭐⭐</td>
+      <td>PLC</td>
+      <td>⭐⭐⭐⭐</td>
     </tr>
     <tr>
       <td>
         Python
-      </td><td>⭐⭐⭐⭐</td>
-      <td>CSS</td><td>⭐⭐⭐⭐</td>
-      <td>Ardunio</td><td>⭐⭐⭐⭐</td>
+      </td>
+      <td>⭐⭐⭐⭐</td>
+      <td>CSS</td>
+      <td>⭐⭐⭐⭐</td>
+      <td>Ardunio</td>
+      <td>⭐⭐⭐</td>
     </tr>
     <tr>
       <td>
-       C ++ 
-      </td><td>⭐⭐⭐</td>
-      <td>Java script  </td><td>⭐⭐</td>
-      <td>LabVIEW</td><td>⭐⭐⭐</td>
+        C ++
+      </td>
+      <td>⭐⭐⭐</td>
+      <td>Java script </td>
+      <td>⭐⭐</td>
+      <td>LabVIEW</td>
+      <td>⭐⭐⭐</td>
     </tr>
     <tr>
       <td></td>
       <td>
 
       </td>
-      <td>MySql</td><td>⭐⭐⭐</td>
-      <td>CAD</td><td>⭐⭐⭐</td>
+      <td>Sql</td>
+      <td>⭐⭐⭐</td>
+      <td>CAD</td>
+      <td>⭐⭐⭐</td>
     </tr>
-    
+    <tr>
+      <td></td>
+      <td>
+
+      </td>
+      <td></td>
+      <td></td>
+      <td>Power Bi</td>
+      <td>⭐⭐</td>
+    </tr>
+
 
   </table>
   <hr>
   <h3>Educational Qualification</h3>
 
-  <table cellspacing=15  ">
+  <table cellspacing=15 ">
     <thead >
     <th>S.NO</th>
     <th>Qualification</th>
@@ -79,7 +106,7 @@
       <td>1</td>
       <td>B.E.Mechatronics Engineering</td>
       <td>Bannari Amman Institute of Technology</td>\
-      <td>8.02*/10.00 </td>
+      <td>7.98*/10.00 </td>
       <td>2022</td>
     </tr>
     <tr>
@@ -97,7 +124,7 @@
       <td>2016</td>
     </tr>
   </table>
-  <small>* <em> upto 5th semester</em></small>
+  <small>* <em> upto 6th semester</em></small>
   <hr>
   <h3>Academic Projects</h3>
   <ul>
@@ -111,55 +138,108 @@
   <h3>Personal Projects</h3>
   <ul>
     
-    <li><h4><a href="https://madujithgowda.github.io/rock-paper-scissors/">Rock Paper Scissors game</a> </h4> <p> <em>It is based on the very famous rock paper scissor game using HTML CSS And JS</em></p></li>
-    <li><h4><a href="https://madujithgowda.github.io/tic-tac-toe/">Tic Tac Toe game</a> </h4> <p> <em>It is based on the very famous Tic Tac Toe game using HTML CSS And JS</em></p></li>
-    <li><h4><a href="https://madujithgowda.github.io/Expense-tracker/">Expense tracker</a>  </h4> <p><em>it helps to keep track of your income and expenses using HTML CSS And JS (on going)</em></p></li>
-    <li><h4><a href="https://madujithgowda.github.io/minion-lang-translator/">Speak Minion Language</a> </h4> <p> <em>It is a funny application that translates english words to Minion(fictional character) lanuage</em></p></li>
-  </ul>
-<hr>
-<h3>Industry Experience</h3>
-<ul>
-  <li><h4><a href="https://drive.google.com/file/d/16Gb8NaOor1aR_Kdms6FOZ_1dlmTTbQUp/view?usp=sharing">Skill Safari Online Internship</a></h4> <p><em>3 week training on HTML CSS and JS  &nbsp;&nbsp;&nbsp;<strong>Date:17-05-2021 to 15-06-2021</strong></em></p></li>
-  <li><h4><a href="https://drive.google.com/file/d/1VJby6ye-0sHpXeKeJfujYBkK-WAJGRxw/view?usp=sharing">Sun Alloys </a></h4><p><em> 1 week training on making cores and moulds &nbsp;&nbsp;&nbsp;<strong>Date:23-12-2019 to 31-12-2019</strong>  </em></p><p></p></li>
+    <li><h4><a href=" https://madujithgowda.github.io/rock-paper-scissors/">Rock Paper Scissors game</a> </h4>
+    <p> <em>It is based on the very famous rock paper scissor game using HTML CSS And JS</em></p>
+    </li>
+    <li>
+      <h4><a href="https://madujithgowda.github.io/tic-tac-toe/">Tic Tac Toe game</a> </h4>
+      <p> <em>It is based on the very famous Tic Tac Toe game using HTML CSS And JS</em></p>
+    </li>
+    <li>
+      <h4><a href="https://madujithgowda.github.io/Expense-tracker/">Expense tracker</a> </h4>
+      <p><em>it helps to keep track of your income and expenses using HTML CSS And JS (on going)</em></p>
+    </li>
+    <li>
+      <h4><a href="https://madujithgowda.github.io/minion-lang-translator/">Speak Minion Language</a> </h4>
+      <p> <em>It is a funny application that translates english words to Minion(fictional character) lanuage</em></p>
+    </li>
+    </ul>
+    <hr>
+    <h3>Industry Experience</h3>
+    <ul>
+      <li>
+        <h4><a href="https://drive.google.com/file/d/16Gb8NaOor1aR_Kdms6FOZ_1dlmTTbQUp/view?usp=sharing">Skill Safari
+            Online Internship</a></h4>
+        <p><em>3 week training on HTML CSS and JS &nbsp;&nbsp;&nbsp;<strong>Date:17-05-2021 to 15-06-2021</strong></em>
+        </p>
+      </li>
+      <li>
+        <h4><a href="https://drive.google.com/file/d/1VJby6ye-0sHpXeKeJfujYBkK-WAJGRxw/view?usp=sharing">Sun Alloys </a>
+        </h4>
+        <p><em> 1 week training on making cores and moulds &nbsp;&nbsp;&nbsp;<strong>Date:23-12-2019 to
+              31-12-2019</strong> </em></p>
+        <p></p>
+      </li>
 
-</ul>
-<hr>
-<h3>Languages Known</h3> 
-<table cellspacing=20>
-  <th>Language</th>
-  <th>Read</th>
-  <th>Write</th>
-  <th>Speak</th>
-  <tr><td> Tamil</td><td>✅</td><td>✅</td><td>✅</td></tr>
-  <tr><td> English</td><td>✅</td><td>✅</td><td>✅</td></tr>
-  <tr><td> Kannada</td><td></td><td></td><td>✅</td></tr>
- 
-</table>
-<em> &nbsp;&nbsp;&nbsp;&nbsp; some basic phrases in Hindi and French</em>
-<hr>
-<h3>Extra curricular activities</h3>
-<ul>
-  <li><h4>Online course </h4><a href="https://coursera.org/share/cfb98172c669a8a08516e5ce38605194">HTML - CSS and JS for web developers</a>  @Coursera <br><br>Complete Webdevelopment Bootcamp  @Udemy (ongoing)<br><br><a href="https://drive.google.com/file/d/1IgSfmHZDl1VUgaMATUvJbBB4uGVm5KIy/view?usp=sharing"> Fullstack web development program </a> @Skill safari</li>
-  <li><h4>Sports</h4>Basketball <br><br>chess</li>
-  
-</ul>
-<hr>
-<div>
-<h3>Contact Me</h3>
-<table cellspacing=20>
-  <th>Phone number </th>
-  <td><a href="tel:+919655967262"> +91 9655967262</a></td>
-  <tr><th>E-mail</th><td><a href="mailto:madujith.mc18@bitsathy.ac.in"  >madujith.mc18@bitsathy.ac.in</a></td>
-    <td>Alt -<a href="mailto:madujith2000@gmail.com"  >madujith2000@gmail.com</a></td>
-  </tr>
-  <tr><th>Github</th><td><a href="https://github.com/MadujithGowda">https://github.com/MadujithGowda</a></td></tr>
-  <tr><th>Linkedin</th><td><a href="www.linkedin.com/in/madujith-ma2000">www.linkedin.com/in/madujith-ma2000</a></td></tr>
-  
-</table>
-</div>
-<hr>
-<div class=footer>
-  <span>&copy;MADUJITH M A</span>
-</div>
+    </ul>
+    <hr>
+    <h3>Languages Known</h3>
+    <table cellspacing=20>
+      <th>Language</th>
+      <th>Read</th>
+      <th>Write</th>
+      <th>Speak</th>
+      <tr>
+        <td> Tamil</td>
+        <td>✅</td>
+        <td>✅</td>
+        <td>✅</td>
+      </tr>
+      <tr>
+        <td> English</td>
+        <td>✅</td>
+        <td>✅</td>
+        <td>✅</td>
+      </tr>
+      <tr>
+        <td> Kannada</td>
+        <td></td>
+        <td></td>
+        <td>✅</td>
+      </tr>
+
+    </table>
+    <em> &nbsp;&nbsp;&nbsp;&nbsp; some basic phrases in Hindi and French</em>
+    <hr>
+    <h3>Extra curricular activities</h3>
+    <ul>
+      <li>
+        <h4>Online course </h4><a href="https://coursera.org/share/cfb98172c669a8a08516e5ce38605194">HTML - CSS and JS
+          for web developers</a> @Coursera <br><br>Complete Webdevelopment Bootcamp @Udemy (ongoing)<br><br><a
+          href="https://drive.google.com/file/d/1IgSfmHZDl1VUgaMATUvJbBB4uGVm5KIy/view?usp=sharing"> Fullstack web
+          development program </a> @Skill safari
+      </li>
+      <li>
+        <h4>Sports</h4>Basketball <br><br>chess
+      </li>
+
+    </ul>
+    <hr>
+    <div>
+      <h3>Contact Me</h3>
+      <table cellspacing=20>
+        <th>Phone number </th>
+        <td><a href="tel:+919655967262"> +91 9655967262</a></td>
+        <tr>
+          <th>E-mail</th>
+          <td><a href="mailto:madujith.mc18@bitsathy.ac.in">madujith.mc18@bitsathy.ac.in</a></td>
+          <td>Alt -<a href="mailto:madujith2000@gmail.com">madujith2000@gmail.com</a></td>
+        </tr>
+        <tr>
+          <th>Github</th>
+          <td><a href="https://github.com/MadujithGowda">https://github.com/MadujithGowda</a></td>
+        </tr>
+        <tr>
+          <th>Linkedin</th>
+          <td><a href="www.linkedin.com/in/madujith-ma2000">www.linkedin.com/in/madujith-ma2000</a></td>
+        </tr>
+
+      </table>
+    </div>
+    <hr>
+    <div class=footer>
+      <span>&copy;MADUJITH M A</span>
+    </div>
 </body>
+
 </html>
